--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A movies service",
   "main": "index.js",
   "scripts": {
+    "start": "node app/server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "http-status": "^1.3.2",
     "redis": "^2.8.0"
   },
   "devDependencies": {
