Setted environmental variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,6 @@ services:
       - redis
     environment:
       - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PREFIX=MOVIES
+      - REDIS_EXPIRE_TIME=600
