--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A movies service",
   "main": "index.js",
   "scripts": {
-    "start": "node app/server/server.js",
+    "start": "node --inspect=0.0.0.0 app/server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
