--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http-status": "^1.3.2",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
