--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http-status": "^1.3.2",
+    "kafka-node": "^4.1.3",
     "redis": "^2.8.0",
     "winston": "^3.2.1"
   },
